# loadi

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/loadi/: __init__.py  experiment_list.py
src/loadi/loaders/: Chen_Burgess_2018.py  Clark_2026.py  Dandi.py  Kanter_Moser_2025.py  Nagelhus_Moser_2023.py  Vandrey_2026.py  Vollan_Moser_2024.py  Wills_Muessing_2023.py  base.py  junji.py  teris.py
src/loadi/resources/data_paths/: Chen_Burgess_2018.json  Chen_Burgess_2018_file_map.json  Clark_2026.json  Vandrey_2026.json  Vandrey_2026_file_paths.json  Vollan_Moser_2024.json  Wills_Muessing_2023.json
