[project]
name = "loadi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "pymatreader>=1.2.2",
    "pynapple>=0.10.2",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.14.0",
]

[project.scripts]
loadi = "loadi:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
