[project]
name = "loadi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2026.3.0",
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "pymatreader>=1.2.2",
    "pynapple>=0.10.2",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.14.0",
]

[project.scripts]
loadi = "loadi:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`) codes, plus import-related (`I`) checks.
select = ["E", "F", "I"]

# Ignore these rules globally
ignore = [
    "E501",  # line too long (handled by line-length setting)
    "F401",  # unused imports (we often have them in notebooks or during development)
]

# All fixable rules can be auto-fixed
fixable = ["ALL"]

# No rules are explicitly unfixable (optional)
unfixable = []

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

